--- a/package.json
+++ b/package.json
@@ -13,8 +13,19 @@
   },
   "dependencies": {
     "gatsby": "^2.0.91",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-typography": "^2.2.5",
+    "gatsby-transformer-sharp": "^2.1.10",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
+    "react-typography": "^0.16.18",
+    "typography": "^0.16.18",
+    "typography-theme-fairy-gates": "^0.16.18"
   },
   "repository": {
     "type": "git",
@@ -24,14 +35,25 @@
     "url": "https://github.com/mdomarus/personal-portfolio/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-preset-gatsby": "^0.1.6",
     "enzyme": "^3.8.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "prettier": "^1.15.3"
+    "react-test-renderer": "^16.7.0"
   }
 }
