--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.10",
     "node-sass": "^4.11.0",
+    "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
