--- a/package.json
+++ b/package.json
@@ -14,21 +14,20 @@
   "dependencies": {
     "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.26",
+    "gatsby-plugin-prefetch-google-fonts": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-sharp": "^2.1.10",
+    "google-fonts-plugin": "2.0.2",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.18",
-    "typography": "^0.16.18",
-    "typography-theme-fairy-gates": "^0.16.18"
+    "react-helmet": "^5.2.0"
   },
   "repository": {
     "type": "git",
