--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.26",
+    "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-prefetch-google-fonts": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sass": "^2.0.7",
