--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "gatsby": "^2.15.16",
-    "gatsby-image": "^2.2.19",
-    "gatsby-plugin-google-analytics": "^2.1.16",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.17.11",
+    "gatsby-image": "^2.2.31",
+    "gatsby-plugin-google-analytics": "^2.1.25",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.1.7",
-    "gatsby-plugin-sass": "^2.1.14",
-    "gatsby-plugin-sharp": "^2.2.22",
-    "gatsby-plugin-typography": "^2.3.7",
-    "gatsby-source-filesystem": "^2.1.22",
-    "gatsby-transformer-sharp": "^2.2.14",
-    "google-fonts-plugin": "5.0.0",
-    "node-sass": "^4.12.0",
+    "gatsby-plugin-react-helmet": "^3.1.14",
+    "gatsby-plugin-sass": "^2.1.21",
+    "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-plugin-typography": "^2.3.16",
+    "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-transformer-sharp": "^2.3.3",
+    "google-fonts-plugin": "5.0.2",
+    "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
+    "sendmail": "^1.6.1"
   },
   "repository": {
     "type": "git",
@@ -38,24 +40,24 @@
     "url": "https://github.com/mdomarus/personal-portfolio/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.13",
+    "babel-preset-gatsby": "^0.2.21",
     "enzyme": "^3.10.0",
-    "eslint": "^6.4.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^3.0.5",
+    "husky": "^3.0.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
-    "react-test-renderer": "^16.9.0"
+    "react-test-renderer": "^16.11.0"
   }
 }
