--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "applause-button": "^3.3.1",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.19.32",
-    "gatsby-image": "^2.2.43",
-    "gatsby-plugin-google-analytics": "^2.1.37",
+    "gatsby": "^2.20.2",
+    "gatsby-image": "^2.3.0",
+    "gatsby-plugin-google-analytics": "^2.2.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.1.23",
-    "gatsby-plugin-sass": "^2.1.30",
-    "gatsby-plugin-sharp": "^2.4.7",
-    "gatsby-plugin-typography": "^2.3.23",
-    "gatsby-source-filesystem": "^2.1.50",
-    "gatsby-transformer-sharp": "^2.3.17",
+    "gatsby-plugin-react-helmet": "^3.2.0",
+    "gatsby-plugin-sass": "^2.2.0",
+    "gatsby-plugin-sharp": "^2.5.1",
+    "gatsby-plugin-typescript": "^2.3.0",
+    "gatsby-plugin-typography": "^2.4.0",
+    "gatsby-source-filesystem": "^2.2.1",
+    "gatsby-transformer-sharp": "^2.4.1",
     "google-fonts-plugin": "5.0.2",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "twilio": "^3.40.0"
+    "twilio": "^3.41.1"
   },
   "repository": {
     "type": "git",
@@ -40,15 +42,17 @@
     "url": "https://github.com/mdomarus/personal-portfolio/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@types/react": "^16.9.25",
+    "@types/react-dom": "^16.9.5",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
-    "babel-preset-gatsby": "^0.2.31",
+    "babel-preset-gatsby": "^0.3.0",
     "enzyme": "^3.11.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-standard": "^14.1.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^11.0.0",
@@ -58,6 +62,9 @@
     "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
-    "react-test-renderer": "^16.13.0"
+    "react-test-renderer": "^16.13.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3"
   }
 }
