--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-filesystem": "^2.3.13",
     "gatsby-transformer-sharp": "^2.5.6",
     "google-fonts-plugin": "5.0.2",
+    "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
