--- a/gatsby-michal-domarus-personal/package.json
+++ b/gatsby-michal-domarus-personal/package.json
@@ -21,8 +21,8 @@
     "gatsby-plugin-sass": "^2.3.5",
     "gatsby-plugin-typography": "^2.5.5",
     "gatsby-source-cloudinary": "0.1.0",
-    "gatsby-transformer-cloudinary": "0.1.0",
     "gatsby-source-filesystem": "^2.3.13",
+    "gatsby-transformer-cloudinary": "0.1.0",
     "google-fonts-plugin": "5.0.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
@@ -30,7 +30,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1"
   },
   "repository": {
     "type": "git",
