--- a/gatsby-michal-domarus-personal/package.json
+++ b/gatsby-michal-domarus-personal/package.json
@@ -12,14 +12,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001183",
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.0",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^3.2.0",
     "gatsby-plugin-typography": "^2.12.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-cloudinary": "1.0.0",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-cloudinary": "1.0.1",
