--- a/gatsby-transformer-cloudinary/package.json
+++ b/gatsby-transformer-cloudinary/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
-    "cloudinary": "^1.25.0"
+    "cloudinary": "^1.25.0",
+    "gatsby": "^3.0.3"
   }
 }
