--- a/gatsby-michal-domarus-personal/package.json
+++ b/gatsby-michal-domarus-personal/package.json
@@ -12,27 +12,29 @@
     "test": "jest"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001196",
-    "dotenv": "^8.2.0",
-    "gatsby": "^3.0.3",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-google-analytics": "^3.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sass": "^4.0.2",
-    "gatsby-plugin-typography": "^3.0.0",
+    "caniuse-lite": "^1.0.30001346",
+    "dotenv": "^16.0.1",
+    "gatsby": "^4.15.2",
+    "gatsby-image": "^3.11.0",
+    "gatsby-link": "^4.15.0",
+    "gatsby-plugin-google-analytics": "^4.15.0",
+    "gatsby-plugin-react-helmet": "^5.15.0",
+    "gatsby-plugin-sass": "^5.15.1",
+    "gatsby-plugin-typescript": "^4.15.0",
+    "gatsby-plugin-typography": "^4.15.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-cloudinary": "1.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-cloudinary": "0.0.1",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-transformer-cloudinary": "2.2.4",
     "google-fonts-plugin": "5.0.2",
     "lodash": "^4.17.21",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
     "path": "^0.12.7",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-slick": "^0.28.0",
+    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
   "repository": {
@@ -43,26 +45,27 @@
     "url": "https://github.com/mdomarus/personal-portfolio/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.1",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-preset-gatsby": "^1.0.0",
+    "babel-jest": "^28.1.0",
+    "babel-preset-gatsby": "^2.15.0",
     "enzyme": "^3.11.0",
-    "eslint": "^7.21.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "husky": "^5.1.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "react-test-renderer": "^17.0.1",
-    "source-map-loader": "^2.0.1"
+    "jest": "^28.1.0",
+    "postcss": "^8.4.14",
+    "react-test-renderer": "^18.1.0",
+    "source-map-loader": "^3.0.1"
   }
 }
