--- a/gatsby-michal-domarus-personal/package.json
+++ b/gatsby-michal-domarus-personal/package.json
@@ -18,14 +18,17 @@
     "gatsby-image": "^3.11.0",
     "gatsby-link": "^4.15.0",
     "gatsby-plugin-google-analytics": "^4.15.0",
+    "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-react-helmet": "^5.15.0",
     "gatsby-plugin-sass": "^5.15.1",
+    "gatsby-plugin-sharp": "^4.15.1",
     "gatsby-plugin-typescript": "^4.15.0",
     "gatsby-plugin-typography": "^4.15.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-cloudinary": "1.0.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-cloudinary": "2.2.4",
+    "gatsby-transformer-sharp": "^4.15.1",
     "google-fonts-plugin": "5.0.2",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
