--- a/gatsby-michal-domarus-personal/package.json
+++ b/gatsby-michal-domarus-personal/package.json
@@ -23,7 +23,6 @@
     "google-fonts-plugin": "5.0.2",
     "lodash": "^4.17.21",
     "node-sass": "^9.0.0",
-    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-slick": "^0.30.2",
@@ -39,12 +38,11 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@types/node": "^22.10.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^29.7.0",
     "babel-preset-gatsby": "^3.13.2",
-    "enzyme": "^3.11.0",
     "eslint": "^9.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard": "^17.1.0",
@@ -53,11 +51,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-react": "^7.34.3",
-    "husky": "^9.0.11",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
     "postcss": "^8.4.39",
-    "react-test-renderer": "^18.3.1",
-    "source-map-loader": "^5.0.0"
+    "source-map-loader": "^5.0.0",
+    "typescript": "^5.7.2"
   }
 }
