--- a/gatsby-michal-domarus-personal/package.json
+++ b/gatsby-michal-domarus-personal/package.json
@@ -8,21 +8,16 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "build": "gatsby build",
-    "serve": "gatsby serve",
-    "test": "jest"
+    "serve": "gatsby serve"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001640",
-    "dotenv": "^16.4.5",
-    "gatsby": "^5.13.6",
-    "gatsby-link": "^5.13.1",
-    "gatsby-plugin-sass": "^6.13.1",
-    "gatsby-plugin-typography": "^5.13.1",
+    "gatsby": "^5.14.0",
+    "gatsby-link": "^5.14.0",
+    "gatsby-plugin-sass": "^6.14.0",
+    "gatsby-plugin-typography": "^5.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-cloudinary": "1.0.0",
     "google-fonts-plugin": "5.0.2",
-    "lodash": "^4.17.21",
-    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-slick": "^0.30.2",
@@ -36,24 +31,23 @@
     "url": "https://github.com/mdomarus/personal-portfolio/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/core": "^7.26.0",
+    "@eslint/js": "^9.15.0",
     "@types/node": "^22.10.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^3.13.2",
-    "eslint": "^9.6.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.4.0",
-    "eslint-plugin-react": "^7.34.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "babel-preset-gatsby": "^3.14.0",
+    "caniuse-lite": "^1.0.30001684",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "identity-obj-proxy": "^3.0.0",
-    "postcss": "^8.4.39",
+    "lodash": "^4.17.21",
+    "node-sass": "^9.0.0",
+    "postcss": "^8.4.49",
     "source-map-loader": "^5.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.16.0"
   }
 }
