--- a/gatsby-michal-domarus-personal/package.json
+++ b/gatsby-michal-domarus-personal/package.json
@@ -12,9 +12,7 @@
   },
   "dependencies": {
     "gatsby": "^5.14.0",
-    "gatsby-link": "^5.14.0",
     "gatsby-plugin-sass": "^6.14.0",
-    "gatsby-plugin-typography": "^5.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-cloudinary": "1.0.0",
     "google-fonts-plugin": "5.0.2",
@@ -36,17 +34,21 @@
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slick": "^0.23.13",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^3.14.0",
     "caniuse-lite": "^1.0.30001684",
+    "core-js": "^3.39.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "identity-obj-proxy": "^3.0.0",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
-    "node-sass": "^9.0.0",
     "postcss": "^8.4.49",
-    "source-map-loader": "^5.0.0",
+    "sass": "^1.81.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
   }
